--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "next build",
+        "build": "node validate.js && next build",
         "start": "next start",
         "lint": "next lint"
     },
