--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "app",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "TARGET_URL=google.com FALLBACK_URL=bing.com next dev",
         "build": "node validate.js && next build",
         "start": "next start",
         "lint": "next lint"
